css/pips.css
body,html {
    background-image: url('../images/mars-background.jpg');
    background-repeat: repeat-y;
    backface-visibility: visible;
    background-size: cover; 
    -webkit-text-size-adjust:100%; /* Disable mobile safari autozoom */
    width: 100vw;
    height: 100vh;
    margin: 0%;
}

.mainbox-left {
    float: left;
    width: 15%;
    height: auto;
    margin: 0 auto;
}

.mainbox-right {
    float: right;
    width: 15%;
    height: auto;
    margin: auto 0;
}

pre {
    overflow-x: auto;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
    width: 100%;
    height: 100%;
    max-width:none;max-height:none;
}

.layerBox:hover {
    background: -moz-linear-gradient(
		top,
		#dfdede 0%,
		#c0bfbf 50%,
		#a7a4a4 92%,
		#929292);
	background: -webkit-gradient(
		linear, left top, left bottom,
		from(#dfdede),
		color-stop(0.50, #c0bfbf),
		color-stop(0.92, #a7a4a4),
		to(#929292));
}

.layerBox {
    width: 100%;
    height: auto;
    padding: 0;
    overflow-y: auto;
    margin-bottom: 5px;
    border-radius: 5px;
    background: -moz-linear-gradient(
		top,
		#a0a0a0 0%,
		#818181 50%,
		#625c5c 92%,
		#696565);
	background: -webkit-gradient(
		linear, left top, left bottom,
		from(#a0a0a0),
		color-stop(0.50, #818181),
		color-stop(0.92, #625c5c),
		to(#696565));
 }

.shadowbox {
    width:100px;
    text-align:center;    
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	color: #ffffff;
	padding: 10px 20px;
	background: -moz-linear-gradient(
		top,
		#dfdede 0%,
		#c0bfbf 50%,
		#a7a4a4 92%,
		#929292);
	background: -webkit-gradient(
		linear, left top, left bottom,
		from(#dfdede),
		color-stop(0.50, #c0bfbf),
		color-stop(0.92, #a7a4a4),
		to(#929292));
	-moz-border-radius: 6px;
	-webkit-border-radius: 6px;
	border-radius: 6px;
	border: 1px solid rgb(0, 0, 0);
	-moz-box-shadow:
		0px 1px 1px rgba(000,000,000,0.5),
		inset 1px 2px 0px rgba(255,255,255,0.4);
	-webkit-box-shadow:
		0px 1px 1px rgba(000,000,000,0.5),
		inset 1px 2px 0px rgba(255,255,255,0.4);
	box-shadow:
		0px 1px 1px rgba(000,000,000,0.5),
		inset 1px 2px 0px rgba(255,255,255,0.4);
	text-shadow:
		1px 1px 2px rgba(000,000,000,0.7),
		0px 1px 0px rgba(255,255,255,0.4);
}

.lightshadowbox {
    width:100px;
    text-align:center;    
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	color: #ffffff;
	padding: 10px 20px;
	background: -moz-linear-gradient(
		top,
		#f0efef 0%,
		#e0dfdf 50%,
		#c5c5c5 92%,
		#bebebe);
	background: -webkit-gradient(
		linear, left top, left bottom,
		from(#f0efef),
		color-stop(0.50, #e0dfdf),
		color-stop(0.92, #c5c5c5),
		to(#bebebe));
	-moz-border-radius: 6px;
	-webkit-border-radius: 6px;
	border-radius: 6px;
	border: 1px solid rgb(0, 0, 0);
	-moz-box-shadow:
		0px 1px 1px rgba(000,000,000,0.5),
		inset 1px 2px 0px rgba(255,255,255,0.4);
	-webkit-box-shadow:
		0px 1px 1px rgba(000,000,000,0.5),
		inset 1px 2px 0px rgba(255,255,255,0.4);
	box-shadow:
		0px 1px 1px rgba(000,000,000,0.5),
		inset 1px 2px 0px rgba(255,255,255,0.4);
	text-shadow:
		1px 1px 2px rgba(000,000,000,0.7),
		0px 1px 0px rgba(255,255,255,0.4);
}

text.user {
    letter-spacing: 0px;
    font-style: normal;
    font-weight: normal;
    font-family: 'Times New Roman', Times, serif;
    font-size: 12px;
}

.mainbox-center {
    float: center;
    height: auto;
    width: 70%;
    border: 10px;
    margin-top: 0;
    margin-bottom: auto;
    margin-left: auto;
    margin-right: auto;
    overflow-y: auto;
    overflow-x: hidden; 
    padding-bottom: 2%;
}

button.paddingBtn {
    min-width: 2rem;
}
.menu {
    display: inline-flex;
    width: 78%;
    height: 85%;
    background: rgb(161, 161, 161);
    border: #000;
    margin-top: 25%;
}

* { box-sizing: border-box }

/* Style the tab */
.tabs {
    float: left;
    border: 1px solid #000;
    background-color: #f1f1f1;
    width: 20%;
    height: auto;
    margin-left: 2%;
    margin-top: 25%;
}

/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    transform: scale(.75)
}
  
/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
}

input:checked + .slider {
    background-color: #007150;
}

input:focus + .slider {
    box-shadow: 0 0 1px #007150;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
} 
/* Style the tab content */
.tabcontent {
    float: left;
    padding: 0px 12px;
    border: 1px solid #000;
    width: 100%;
    border-left: none;
    border-bottom:none;
    padding-bottom: 2%;
    height: auto;
    text-align: center;
}

/* Style the buttons that are used to open the tab content */
.tabs button {
    display: block;
    background-color: inherit;
    color: black;
    padding: 22px 16px;
    width: 100%;
    border: none;
    outline: none;
    text-align: left;
    font-size: 55%;
    cursor: pointer;
    transition: 0.3s;
}
/* Change background color of buttons on hover */
.tabs button:hover {
    background-color: #ddd;
}

/* Create an active/current "tab button" class */
.tabs button.active {
    background-color: rgb(161, 161, 161);
}

.text-stroke {
    -webkit-text-stroke: 1px black;
    color: white;
    text-shadow:
        -1px -1px 0 #000,
        1px -1px 0 #000,
        -1px 1px 0 #000,
        1px 1px 0 #000"
}
/* ... */

